fix: markdown line numbers background color when in dark mode

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -329,7 +329,7 @@ blockquote.q-markdown--note
       background: $dark
 
     .q-markdown--line-numbers-wrapper
-      background: $grey-8
+      background: $dark
       color: $grey-2
 
     .q-markdown--token
